--- a/index.html
+++ b/index.html
@@ -1,7 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="home.css">
+    <link rel="shortcut icon" href="assets/mc-logo.png" type="image/x-icon">
+    <title>Eaglercraft Extras</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round"
+    rel="stylesheet">
+</head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B23XL7G2NK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B23XL7G2NK');
+</script>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<ul>
+    <li><a style="margin-left: 5px;" class="active" href="index.html">Home</a></li>
+    <li><a href="clients.html">Clients</a></li>
+    <li><a href="worlds.html">Worlds</a></li>
+    <li><a href="packs.html">Resource Packs</a></li>
+    <li><a href="servers.html">Servers</a></li>
+    <li><a href="mc quick guide/index.html" target="_blank">Quick Guide</a></li>
+    <li style="float: right;"><a href="https://github.com/cobblesteve01/Eaglercraft-Extras" target="_blank"><img src="assets/github.png" style="height: 25px; color: white;" alt=""></a></li>
+</ul>
+
+<br><br><br><br>
+
+<div style="display: flex; justify-content: center;">
+    <img src="assets/mc-logo.png" style="height: 175px; margin-right: 25px;" alt="logo">
+    <h1 style="font-size: 42px; font-family: inter-bold; margin-top: 60px;">Eaglercraft Extras</h1>
+</div>
+
+<br><br>
+
+<div class="container">
+    <button class="big-button"><u>Announcements</u> <br><br>Eaglercraft 1.9, 1.11, 1.14, <br> Starlike, and 1.8-u39 are out now! <br> IP 2 for Time Legacy added</button>
+    <button class="big-button">Need Help?<br><br>Fill out an issue or a discussion! We'll be sure to get back to it.</button>
+</div>
+
+
 </body>
 </html>
