--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
     <link rel="shortcut icon" href="assets/mc-logo.png" type="image/x-icon">
-    <title>Eaglercraft Extras</title>
+    <title>Eaglercraft Vault but on the Web</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round"
     rel="stylesheet">
 </head>
@@ -34,13 +34,13 @@
 
 <div style="display: flex; justify-content: center;">
     <img src="assets/mc-logo.png" style="height: 175px; margin-right: 25px;" alt="logo">
-    <h1 style="font-size: 42px; font-family: inter-bold; margin-top: 60px;">Eaglercraft Extras</h1>
+    <h1 style="font-size: 42px; font-family: inter-bold; margin-top: 60px;">Eaglercraft Vault but on the Web</h1>
 </div>
 
 <br><br>
 
 <div class="container">
-    <button class="big-button"><u>Announcements</u> <br><br>Eaglercraft 1.9, 1.11, 1.14, <br> Starlike, and 1.8-u39 are out now! <br> IP 2 for Time Legacy added</button>
+    <button class="big-button"><u>Announcements</u> <br><br>This Exists Now</button>
     <button class="big-button">Need Help?<br><br>Fill out an issue or a discussion! We'll be sure to get back to it.</button>
 </div>
 
