yet another fix

--- a/clients.html
+++ b/clients.html
@@ -74,8 +74,8 @@
 <div class="container">
   <button class="button" style="height: 250px; cursor: unset; margin: 15px;">
     <h1 style="font-size: 32px;">Modded</h1><br>
-    <a class="play-hover" style="text-decoration: none; color: white; border-radius: 12.5px; background-color: mediumseagreen; padding: 10px 40px;" href="clients/modded/index.html">
-      <span class="material-icons-round">play_circle</span>&nbsp;Launch
+    <a class="play-hover" style="text-decoration: none; color: white; border-radius: 12.5px; background-color: dodgerblue; padding: 10px 40px;" href="clients/modded/index.html">
+      <span class="material-icons-round">play_circle</span>&nbsp;Play
     </a>
   </button>
 </div>
