SO MANY DAMN FIXES

--- a/mobile.html
+++ b/mobile.html
@@ -34,5 +34,5 @@
 <p align="center" style='font-family: inter-medium;'>There is only one 💀</p><br><br><br>
 
 <div class="container">
-    <button class="button" style="height: 200px; margin: 15px; cursor: unset; font-family: inter-bold">EaglercraftX<p style="font-size: 14px; padding-bottom: 15px; font-family: inter-medium">Author: Irv77</p><a class="play-hover" style="text-decoration: none; color: white; border-radius: 12.5px; background-color: dodgerblue; padding: 10px; padding-right: 40px; padding-left: 40px; font-family: inter-bold" href="mobile/index.html"><span class="material-icons-round">play_circle</span>&nbsp;Play</a></button><br>
+    <button class="button" style="height: 200px; margin: 15px; cursor: unset; font-family: inter-bold">EaglercraftX<p style="font-size: 14px; padding-bottom: 15px; font-family: inter-medium">Author: Irv77</p><a class="play-hover" style="text-decoration: none; color: white; border-radius: 12.5px; background-color: dodgerblue; padding: 10px; padding-right: 40px; padding-left: 40px; font-family: inter-bold" href="clients/mobile/index.html"><span class="material-icons-round">play_circle</span>&nbsp;Play</a></button><br>
 </div>
